--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.3.0"
+    "gulp-pug": "^3.3.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
